# EnrollmentWatchUoT

./: .gitignore  CMakeLists.txt  README.md  webpack.config.js
Pysrc/: README.md  analysis.ipynb  analysis.py  proc.ipynb  proc.py  settings.py
Pysrc/.ipynb_checkpoints/: scraper-checkpoint.ipynb
Rsrc/: .Rapp.history  main.R  myFile
daemon/: .daemon.conf  Makefile  README.md  daemon  daemon.cpp  daemon.h  watcherd  watcherd.cpp  watcherd.h
learn/: README.md  planning.md  python_notes.md  typescript_notes.md
resources/: course_codes  course_codes_short  subject_list
resources/20169/: ACT230  ACT240  ACT245  ACT247  ACT348  ACT349  ACT370  ACT371  ACT372  ACT451  ACT452  ACT455  ACT460  ACT466  ACT470  ACT471  ACT473  ACT475  ACT496  ACT497  ACT498  ACT499  ANA300  ANA301  ANA400  ANA498  ANT100  ANT200  ANT203  ANT204  ANT207  ANT208  ANT253  ANT299  ANT314  ANT316  ANT317  ANT322  ANT327  ANT329  (+2570 more)
resources/201701_proc/: 1482515984  1482520141  1482606541  1482692941  1482779341  1482865741  1482952141  1483038542  1483124941  1483211341  1483297741  1483384141  1483470541  1483556941  1483643341  1483729741  1483816141  1483902541  1483988941  1484075341  1484161741  1484248141  1484334541  1484420942  1484507341  1484593741  1484680141  1484766541  1484852941  1484939341  1485025741  1485112141  1485198541  1485284941  1485371341  1485457741  (+103 more)
site/: index.html  package.json  webpack.config.js
src/: daemon.h  proc.ipynb  proc.py  scraper.ipynb  scraper.py  tut.cpp  tut.h.in
stat/: __init__.py  analysis.py  scraper.py  settings.py
utils/: math.cpp  math.h
(+2 files in other folders)
